--- a/contact-center/use/toc.yml
+++ b/contact-center/use/toc.yml
@@ -80,6 +80,12 @@
           items:
           - name: Use intent-based suggestions
             href: use-intent-suggestions.md
+        - name: Customer Knowledge Management Agent
+          items:
+          - name: Review knowledge articles created by the Customer Knowledge Management Agent
+            href: /dynamics365/customer-service/use/admin-km-agent-review?context=/dynamics365/contact-center/context/use-context
+          - name: Use knowledge insights for Customer Knowledge Management Agent
+            href: /dynamics365/customer-service/use/admin-km-agent-insights?context=/dynamics365/contact-center/context/use-context
       - name: Use Copilot features in contact center-standalone
         items: 
         - name: Copilot feature availability across applications
