--- a/contact-center/administer/toc.yml
+++ b/contact-center/administer/toc.yml
@@ -311,9 +311,9 @@
         - name: Customer Knowledge Management Agent
           items:
           - name: Enable Customer Knowledge Management Agent
-            href: /dynamics365/customer-service/administer/admin-km-agent?toc=/dynamics365/contact-center/administer/toc.json&bc=../../breadcrumb/toc.yml
+            href: /dynamics365/customer-service/administer/admin-km-agent-review?context=/dynamics365/contact-center/context/administer-context
           - name: Configure connection references
-            href: /dynamics365/customer-service/administer/admin-km-agent-connections?toc=/dynamics365/contact-center/administer/toc.json&bc=../../breadcrumb/toc.yml
+            href: /dynamics365/customer-service/administer/admin-km-agent-connections?context=/dynamics365/contact-center/context/administer-context   
       - name: Copilot in Contact Center
         items:
         - name: Manage Copilot features
