Category:  New content Workitem: https://dev.azure.com/msft-skilling/Content/_workitems/edit/442517/ Description: C2 messaging APIS

--- a/contact-center/extend/toc.yml
+++ b/contact-center/extend/toc.yml
@@ -96,6 +96,8 @@
               href: api/api-conversation-context.md            
             - name: Use webhook to receive messages and events
               href: api/api-conversation-webhook.md    
+            - name: Configure Copilot Studio agent custom events
+              href: configure-custom-events.md                
           - name: Error handling
             href: error-handling.md                   
       - name: Voice
