--- a/contact-center/extend/toc.yml
+++ b/contact-center/extend/toc.yml
@@ -87,7 +87,7 @@
             - name: "/consumer/conversations/create"
               href: api/api-conversation-create.md
             - name: "/conversation/{id}"
-              href: api/api-conversation-conversationid.md
+              href: api/api-conversationid.md
             - name: "/conversations"
               href: api/api-conversation.md
             - name: "/conversation/{conversationId}/messages"
