--- a/contact-center/use/toc.yml
+++ b/contact-center/use/toc.yml
@@ -22,6 +22,8 @@
           href: /dynamics365/customer-service/use/oc-notifications?context=/dynamics365/contact-center/context/use-context
         - name: View communication panel
           href: /dynamics365/customer-service/use/oc-conversation-control?context=/dynamics365/contact-center/context/use-context
+        - name: View conversation transcripts and call recordings
+          href: /dynamics365/customer-service/use/voice-channel-call-recordings-transcripts?context=/dynamics365/contact-center/context/use-context          
         - name: View active conversations
           href: ../use/oc-active-conv.md
         - name: Create a record
@@ -68,8 +70,6 @@
           href: /dynamics365/customer-service/use/manage-voicemails?context=/dynamics365/contact-center/context/use-context
         - name: Transfer calls and consult with other users
           href: /dynamics365/customer-service/use/voice-channel-transfer-consult?context=/dynamics365/contact-center/context/use-context
-        - name: View call recordings and transcripts
-          href: /dynamics365/customer-service/use/voice-channel-call-recordings-transcripts?context=/dynamics365/contact-center/context/use-context
         - name: Monitor voice calls
           href: /dynamics365/customer-service/use/voice-channel-monitor-calls?context=/dynamics365/contact-center/context/use-context
       - name: Use autonomous service agents (preview)
