--- a/contact-center/administer/toc.yml
+++ b/contact-center/administer/toc.yml
@@ -320,6 +320,8 @@
             href: manage-quality-evaluation-agent.md
           - name: Configure connection references
             href: quality-evaluation-agent-connections.md
+          - name: Evaluate closed conversations with Quality Evaluation Agent
+            href: evaluate-conversations.md
       - name: Copilot in Contact Center
         items:
         - name: Manage Copilot features
