--- a/contact-center/administer/toc.yml
+++ b/contact-center/administer/toc.yml
@@ -288,13 +288,13 @@
           href: create-rollout-plans.md
         - name: View Agent insights
           href: ../use/agent-insights.md
-      - name: Autonomous service agents (preview)
+      - name: Autonomous service agents
         items:
         - name: Overview of autonomous service agents
           href: autonomous-agents-overview.md
         - name: Manage consumption-based billing, capacity
           href: /dynamics365/customer-service/administer/setup-pay-as-you-go?context=/dynamics365/contact-center/context/administer-context
-        - name: Customer Intent Agent
+        - name: Customer Intent Agent (preview)
           items:
           - name: Overview of Customer Intent Agent
             href: overview-customer-intent-agent.md
@@ -308,7 +308,7 @@
             href: set-up-intent-agent.md
           - name: Set up voice agents to use intents
             href: set-up-voice-agents-to-use-intents.md
-        - name: Customer Knowledge Management Agent
+        - name: Customer Knowledge Management Agent (preview)
           items:
           - name: Enable Customer Knowledge Management Agent
             href: /dynamics365/customer-service/administer/admin-km-agent?context=/dynamics365/contact-center/context/administer-context
