--- a/contact-center/use/toc.yml
+++ b/contact-center/use/toc.yml
@@ -88,10 +88,12 @@
             href: /dynamics365/customer-service/use/admin-km-agent-insights?context=/dynamics365/contact-center/context/use-context
         - name: Quality Evaluation Agent
           items:
-          - name: Use evaluation plan
-            href: evaluation-plan.md
           - name: Use evaluation criteria
             href: evaluation-criteria.md
+          - name: Use evaluation plan
+            href: evaluation-plan.md
+          - name: Use on-demand evaluation
+            href: on-demand-evaluation.md
           - name: Use evaluations
             href: use-evaluations.md
       - name: Use Copilot features in contact center-standalone
