--- a/contact-center/administer/toc.yml
+++ b/contact-center/administer/toc.yml
@@ -310,7 +310,7 @@
             href: set-up-intent-agent.md
           - name: Set up voice agents to use intents
             href: set-up-voice-agents-to-use-intents.md
-        - name: Customer Knowledge Management Agent (preview)
+        - name: Customer Knowledge Management Agent
           items:
           - name: Enable Customer Knowledge Management Agent
             href: /dynamics365/customer-service/administer/admin-km-agent?context=/dynamics365/contact-center/context/administer-context
