--- a/contact-center/use/toc.yml
+++ b/contact-center/use/toc.yml
@@ -322,10 +322,12 @@
           items:
           - name: Forecast agent, case, and conversation volumes
             href: /dynamics365/customer-service/use/use-volume-forecasting?context=/dynamics365/contact-center/context/use-context
-        - name: Customize visual display
-          href: /dynamics365/customer-service/use/customize-reports?context=/dynamics365/contact-center/context/use-context
-        - name: Export and import visual customization
-          href: /dynamics365/customer-service/use/export-import-visual-customization?context=/dynamics365/contact-center/context/use-context
+        - name: Manage report visuals
+          items:
+          - name: Customize visual display
+            href: /dynamics365/customer-service/use/customize-reports?context=/dynamics365/contact-center/context/use-context
+          - name: Export and import visual customizations
+            href: /dynamics365/customer-service/use/export-import-visual-customization?context=/dynamics365/contact-center/context/use-context
         - name: Customize the bot dashboard
           href: customize-agent-dashboard.md       
         - name: Customize data models
