--- a/contact-center/implement/toc.yml
+++ b/contact-center/implement/toc.yml
@@ -82,7 +82,7 @@
         items:
         - name: Overview
           href: /dynamics365/customer-service/implement/responsible-ai-overview?context=/dynamics365/contact-center/context/implement-context
-        - name: Responsible AI FAQ for AI Agents (Preview)
+        - name: Responsible AI FAQ for AI Agents
           href: faq-rai-ai-agents.md
         - name: Responsible AI FAQ for Copilot in Customer Service
           href: /dynamics365/customer-service/implement/faq-responsible-ai-copilot?context=/dynamics365/contact-center/context/implement-context
