--- a/contact-center/administer/toc.yml
+++ b/contact-center/administer/toc.yml
@@ -624,6 +624,8 @@
           href: /dynamics365/customer-service/administer/migrate-config-data-for-custom-channel?context=/dynamics365/contact-center/context/administer-context
         - name: Migrate configurations containing Copilot Studio survey agents
           href: migrate-survey-agents.md
+      - name: Known issues in Customer Service and Dynamics 365 Contact Center
+        href: https://go.microsoft.com/fwlink/p/?linkid=2165393
       - name: Responsible AI
         items:
         - name: Overview
