--- a/contact-center/implement/toc.yml
+++ b/contact-center/implement/toc.yml
@@ -78,6 +78,8 @@
           href: /dynamics365/customer-service/implement/persona-privilege-mapping?context=/dynamics365/contact-center/context/implement-context
       - name: Copilot in Dynamics 365 Contact Center architecture
         href: /dynamics365/guidance/reference-architectures/dynamics-365-customer-service-copilot-architecture?context=/dynamics365/contact-center/context/implement-context
+      - name: Known issues in Customer Service and Dynamics 365 Contact Center
+        href: https://go.microsoft.com/fwlink/p/?linkid=2165393
       - name: Responsible AI
         items:
         - name: Overview
