GA ready of Agent hub and rollout manager

--- a/contact-center/administer/toc.yml
+++ b/contact-center/administer/toc.yml
@@ -276,7 +276,7 @@
           href: /dynamics365/customer-service/administer/voice-channel-pricing-scenarios?context=/dynamics365/contact-center/context/administer-context
         - name: FAQ about the voice channel
           href: /dynamics365/customer-service/administer/voice-channel-faqs?context=/dynamics365/contact-center/context/administer-context
-      - name: Agent hub (preview)
+      - name: Agent hub
         items:
         - name: Learn guide for AI agents and Copilot features
           items:
@@ -298,7 +298,7 @@
           href: /dynamics365/customer-service/administer/setup-pay-as-you-go?context=/dynamics365/contact-center/context/administer-context
         - name: Configure connection references
           href: /dynamics365/customer-service/administer/admin-km-agent-connections?context=/dynamics365/contact-center/context/administer-context  
-        - name: Customer Intent Agent (preview)
+        - name: Customer Intent Agent
           items:
           - name: Overview of Customer Intent Agent
             href: overview-customer-intent-agent.md
