--- a/contact-center/use/toc.yml
+++ b/contact-center/use/toc.yml
@@ -296,6 +296,8 @@
             href: /dynamics365/customer-service/use/oc-bot-dashboard?context=/dynamics365/contact-center/context/use-context
           - name: Voicemail dashboard
             href: /dynamics365/customer-service/use/oc-voicemail-dashboard?context=/dynamics365/contact-center/context/use-context
+          - name: Proactive outbound dashboard
+            href: proactive-outbound-dashboard.md
         - name: Manage ongoing conversations
           href: all-ongoing-conversations.md
         - name: Use knowledge management analytics
