--- a/contact-center/use/toc.yml
+++ b/contact-center/use/toc.yml
@@ -296,8 +296,12 @@
             href: /dynamics365/customer-service/use/oc-bot-dashboard?context=/dynamics365/contact-center/context/use-context
           - name: Voicemail dashboard
             href: /dynamics365/customer-service/use/oc-voicemail-dashboard?context=/dynamics365/contact-center/context/use-context
-        - name: Manage ongoing conversations
-          href: all-ongoing-conversations.md
+        - name: Use conversations
+          items:
+          - name: Manage all ongoing conversations
+            href: all-ongoing-conversations.md
+          - name: Manage ongoing record conversations
+            href: manage-ongoing-record-conversations.md
         - name: Use knowledge management analytics
           href: /dynamics365/customer-service/use/knowledge-search-analytics-cs?context=/dynamics365/contact-center/context/use-context
         - name: View copilot analytics report
