--- a/contact-center/use/toc.yml
+++ b/contact-center/use/toc.yml
@@ -234,6 +234,12 @@
             href: agent-realtime-dashboard.md
           - name: Ongoing Conversation report
             href: /dynamics365/customer-service/use/realtime-ongoing?context=/dynamics365/contact-center/context/use-context
+          - name: Backlog conversation report
+            href: /dynamics365/customer-service/use/realtime-backlog-conv?context=/dynamics365/contact-center/context/use-context
+          - name: Intent report
+            href: realtime-intent-group-report
+          - name: Agent group
+            href: realtime-agent-group-report
         - name: Use historical analytics dashboards
           items: 
           - name: Dashboards
