--- a/contact-center/use/toc.yml
+++ b/contact-center/use/toc.yml
@@ -300,6 +300,8 @@
             href: /dynamics365/customer-service/use/oc-voicemail-dashboard?context=/dynamics365/contact-center/context/use-context
           - name: Proactive Outbound dashboard
             href: proactive-outbound-dashboard.md
+          - name: Bot-Intent dashboard
+            href: bot-intent-historical.md
         - name: Use conversations
           items:
           - name: Manage all ongoing conversations
