--- a/contact-center/implement/toc.yml
+++ b/contact-center/implement/toc.yml
@@ -60,7 +60,7 @@
           href: /dynamics365/customer-service/implement/export-import-omnichannel-data?context=/dynamics365/contact-center/context/implement-context
         - name: Copy an environment with Dynamics 365 Contact Center
           href: /dynamics365/customer-service/implement/copy-environment-with-omnichannel?context=/dynamics365/contact-center/context/implement-context
-        - name: Reset, restore, recover omnichannel environments
+        - name: Manage omnichannel environments
           href: restore-environment.md
         - name: Uninstall Dynamics 365 Contact Center
           href: /dynamics365/customer-service/implement/remove-omnichannel?context=/dynamics365/contact-center/context/implement-context
