Workitem: https://dev.azure.com/bacx/content/_workitems/edit/38950/ Updated for freshness and relevance after verifying the articles.

--- a/contact-center/index.yml
+++ b/contact-center/index.yml
@@ -69,6 +69,8 @@ additionalContent:
         text: Set up embedded experience
       - url: /dynamics365/customer-service/administer/voice-channel-install?context=/dynamics365/contact-center/context/administer-context
         text: Configure the voice channel
+      - url: administer/create-rollout-plans.md
+        text: Create rollout plans to manage AI agents
     - title: Configure connectors
       links:
       - url: administer/configure-salesforce-connector.md
