Category:  Content-Improvement Bugs/Issue Work item: https://dev.azure.com/bacx/content/_workitems/edit/39239 Description: Add Contribute to Dynamics 365 documentation link to CS and CC ToCs

--- a/contact-center/administer/toc.yml
+++ b/contact-center/administer/toc.yml
@@ -646,3 +646,5 @@
       href: ../extend/configure-servicenow-connector.md
     - name: Dynamics 365 Customer Service documentation
       href: /dynamics365/customer-service/
+    - name: Contribute to documentation
+      href: /dynamics365/get-started/contribute?context=/dynamics365/contact-center/context/administer-context
