--- a/contact-center/extend/toc.yml
+++ b/contact-center/extend/toc.yml
@@ -174,3 +174,5 @@
       href: ../use/ccw-overview.md
     - name: Dynamics 365 Customer Service documentation
       href: /dynamics365/customer-service/
+    - name: Contribute to documentation
+      href: /dynamics365/get-started/contribute?context=/dynamics365/contact-center/context/extend-context
