--- a/contact-center/use/toc.yml
+++ b/contact-center/use/toc.yml
@@ -64,7 +64,7 @@
           href: voice-channel-agent-experience.md
         - name: How to avoid call disconnection
           href: voice-channel-agent-experience.md#avoid-call-disconnection
-        - name: Use the Desktop companion application
+        - name: Use the desktop companion application
           href: voice-dca-application.md
         - name: Manage voicemails
           href: /dynamics365/customer-service/use/manage-voicemails?context=/dynamics365/contact-center/context/use-context
